--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@
 .App-intro {
   font-size: large;
 }
-
+.show-game-played-button {
+	font-size: 16px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
